@@ -3,3 +3,4 @@ w3mhelp.cgi
 w3mhelp-funcdesc.en.pl
 w3mhelp-funcdesc.ja.pl
 w3mhelp-funcname.pl
+w3mhelp-funcdesc-stamp
